clusters/app.ci/dex/02_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dex
  name: dex
  namespace: dex
spec:
  replicas: 3
  selector:
    matchLabels:
      app: dex
  template:
    metadata:
      labels:
        app: dex
      annotations:
        config.yaml: |
          [...]
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - dex
              topologyKey: "kubernetes.io/hostname"
      serviceAccountName: dex
      containers:
      - image: ghcr.io/dexidp/dex:v2.31.0
        name: dex
        command: ["/usr/local/bin/dex", "serve", "/etc/dex/cfg/config.yaml"]
        readinessProbe:
          httpGet:
            path: /.well-known/openid-configuration
            port: 8000
        ports:
        - name: http
          containerPort: 80
        volumeMounts:
        - name: config
          mountPath: /etc/dex/cfg
      volumes:
      - name: config
        downwardAPI:
          items:
          - path: config.yaml
            fieldRef:
              fieldPath: metadata.annotations['config.yaml']
