clusters/app.ci/dex/04_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dex
  namespace: dex
spec:
  ports:
  - name: dex
    port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app: dex
