clusters/app.ci/dex/manifests.yaml
# !!! WARNING - DO NOT MODIFY !!!
# Generated by cluster-init: https://github.com/openshift/ci-tools/tree/main/cmd/cluster-init
# Modifying this file manually might break some tests in both openshift/ci-tools and openshift/release repositories.
# Please consider, instead, writing a yaml patch in one of the cluster-install.yaml into clusters/_cluster-install/
# or, alternatively, modifying the cluster-init tool itself.

apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Prune=false,Delete=confirm
  name: dex
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: cert-issuer
  name: dex
  namespace: dex
spec:
  ingressClassName: openshift-default
  rules:
  - host: idp.ci.openshift.org
    http:
      paths:
      - backend:
          service:
            name: dex
            port:
              number: 80
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - idp.ci.openshift.org
    secretName: dex-tls
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: dex
  name: dex
  namespace: dex
spec:
  replicas: 3
  selector:
    matchLabels:
      app: dex
  strategy: {}
  template:
    metadata:
      annotations:
        config.yaml: |
          [...]
      creationTimestamp: null
      labels:
        app: dex
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - dex
              topologyKey: kubernetes.io/hostname
            weight: 100
      containers:
      - command:
        - /usr/local/bin/dex
        - serve
        - /etc/dex/cfg/config.yaml
        image: ghcr.io/dexidp/dex:v2.31.0
        name: dex
        ports:
        - containerPort: 80
          name: http
        readinessProbe:
          httpGet:
            path: /.well-known/openid-configuration
            port: 8000
        resources: {}
        volumeMounts:
        - mountPath: /etc/dex/cfg
          name: config
      serviceAccountName: dex
      volumes:
      - downwardAPI:
          items:
          - fieldRef:
              fieldPath: metadata.annotations['config.yaml']
            path: config.yaml
        name: config
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: dex
  namespace: dex
spec:
  ports:
  - name: dex
    port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app: dex
